syntax = "proto3";
package user;
option go_package = "github.com/Salladin95/card-quizzler-microservices/user-service/user-service";

message SignInPayload {
  string email = 1;
  string password = 2;
}

message SignUpPayload {
  string email = 1;
  string password = 2;
  string name = 3;
  string birthday = 4;
}

message UpdateEmailPayload {
  string id = 1;
  string email = 2;
  int64 code = 3;
}

message SignInRequest {
  SignInPayload payload = 1;
}

message SignUpRequest {
  SignUpPayload payload = 1;
}

message UpdateEmailRequest {
  UpdateEmailPayload payload = 1;
}

message ID {
  string id = 1;
}

message Email {
  string email = 1;
}

message EmptyRequest {
}

message Response {
  bytes data = 1;
  int64 code = 2;
  string message = 3;
}

service UserService {
  rpc SignIn(SignInRequest) returns (Response);
  rpc SignUp(SignUpRequest) returns (Response);
  rpc UpdateEmail(UpdateEmailRequest) returns (Response);
  rpc GetUsers(EmptyRequest) returns (Response);
  rpc GetUserById(ID) returns (Response);
  rpc GetUserByEmail(Email) returns (Response);
  rpc DeleteUser(ID) returns (Response);
}
